complex v0.0.2 (Release data: 2022-09-07)
==============

Changes:
* Added complex variance, covariance and correlation, cvar, ccov and cor functions respectively.


complex v0.0.1 (Release data: 2019-07-01)
==============

This is the initial release of the package. At the moment, we only have CAR function.