@@ -1,6 +1,9 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(plot,cacf)
+S3method(print,cacf)
 export(CAR)
+export(cacf)
 export(ccor)
 export(ccov)
 export(ccov2ccor)
